Tic Tac Toe Problem JavaScript Code

--- a/Frontend-practise/Tic Tac Toe/style.css
+++ b/Frontend-practise/Tic Tac Toe/style.css
@@ -38,7 +38,7 @@ h2 {
 .box {
     height: 100px;
     width: 100px;
-    background-color: #ffffff;
+    background-color: lightgoldenrodyellow;
     border-radius: 10px;
     font-size: 48px;
     font-weight: bold;
